--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>xoxomichelle</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+        <h1>inside my mind</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </nav>
+
+      <main>
+        <!-- Sidebar section -->
+        <div class="sidebar">
+          <img
+            class="sidebar-img"
+            src="https://m.media-amazon.com/images/I/61PmewJnmIL._AC_UF894,1000_QL80_.jpg"
+
+          />
+        </div>
+
+        <!-- Content section -->
+        <div class="content">
+          <h2>Michelle Grande</h2>
+          <p>Student at Bonnabel</p>
+          <div id="interests">
+            <h3>Interests</h3>
+            <ul>
+              <li>Working out</li>
+              <li>Music</li>
+              <li>Baking Cupcakes</li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
