Finalized platformer game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- All content goes here -->
     <div id="all-contents">
       <nav>
-        <h1>inside my mind</h1>
+        <h1>Inside my mind</h1>
         <ul id="nav-ul">
           <li class="nav-li">
             <a href="index.html">Home</a>
@@ -32,14 +32,17 @@
 
         <!-- Content section -->
         <div class="content">
-          <h2>Michelle Grande</h2>
-          <p>Student at Bonnabel</p>
+          <h2>Michelle Gabriela</h2>
+          <p>8|12|07
+            <3
+          </p>
           <div id="interests">
             <h3>Interests</h3>
             <ul>
               <li>Working out</li>
               <li>Music</li>
-              <li>Baking Cupcakes</li>
+              <li>doing hair
+             </li>
             </ul>
           </div>
         </div>
