--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -33,6 +33,7 @@
 	<div class="box">?</div>
 
 	<script>
+		
 		(function () {
 			'use strict'
 			/* global jQuery */
@@ -66,8 +67,9 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
-
+			var positionX = 0; // TODO 2 
+			var points = 0; // TODO 4
+			var speed = 10; // TODO 5 
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -75,9 +77,23 @@
 			turn it around! 
 			*/
 			function update() {
+			
+				// TODO 6
+				if (positionX > boardWidth) {
+				speed *= -1;
+			}
 
+			// TODO 7
+			if (positionX < 0){
+			speed *= -1;
+		}
 
+			positionX += speed; // TODO 5
+				moveBoxTo(positionX); // TODO 1
 			};
+
+		
+				
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -85,6 +101,11 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				positionX = 0; // TODO 3 
+				points ++; // TODO 4
+				changeBoxText (points); // TODO 4
+				speed += 3; // TODO 5 
+				speed = 3 * points + 10; // TODO 8 
 
 
 			};
